[gd_scene load_steps=5 format=3 uid="uid://b2rmfgilxygvt"]

[ext_resource type="Script" path="res://scripts/art/gui_health.gd" id="1_352pu"]
[ext_resource type="FontFile" uid="uid://dk2tmtv4d2kef" path="res://assets/fonts/tfonts/quicksand/Quicksand-Bold.ttf" id="1_tu18b"]
[ext_resource type="Texture2D" uid="uid://ctb6nbqf6lqku" path="res://assets/ui/GUI_Brain_Empty.png" id="2_0qsk3"]
[ext_resource type="Texture2D" uid="uid://bviisl0bl6al1" path="res://assets/ui/GUI_Brain_Full.png" id="3_egfqy"]

[node name="GUI_Health" type="Node2D"]
script = ExtResource("1_352pu")

[node name="Title_Health" type="Label" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 197.0
offset_right = 194.0
offset_bottom = 247.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_tu18b")
theme_override_font_sizes/font_size = 40
text = "Stability"
horizontal_alignment = 2
vertical_alignment = 2

[node name="GUI_Health_Bar" type="TextureProgressBar" parent="."]
offset_right = 192.0
offset_bottom = 192.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("2_0qsk3")
texture_progress = ExtResource("3_egfqy")

[node name="GUI_Health_Number" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 138.0
offset_right = 131.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_tu18b")
theme_override_font_sizes/font_size = 40
text = "100%"
vertical_alignment = 2

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 192, 0, 192, 192, 0, 192)
closed = true
width = 11.0
joint_mode = 2

[connection signal="value_changed" from="GUI_Health_Bar" to="." method="_on_gui_health_bar_value_changed"]
